<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include layout="@layout/toolbar_create_event" />

        <TextView
            android:id="@+id/event_chose_category_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginEnd="@dimen/editTextHorizontalMargin"
            android:layout_marginStart="@dimen/editTextHorizontalMargin"
            android:layout_marginTop="@dimen/detailsInfoTopMargin"
            android:text="@string/choseCategory"
            android:textSize="@dimen/recycler_text_size" />

        <Spinner
            android:id="@+id/spinner_category_chose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_chose_category_label"
            android:layout_marginEnd="@dimen/editTextHorizontalMargin"
            android:layout_marginStart="@dimen/editTextHorizontalMargin"
            android:layout_marginTop="@dimen/editTextMarginTop">
    </Spinner>

        <TextView
            android:id="@+id/event_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_category_chose"
            android:layout_marginEnd="@dimen/editTextHorizontalMargin"
            android:layout_marginStart="@dimen/editTextHorizontalMargin"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:text="@string/eventNameLabel"
            android:textSize="@dimen/recycler_text_size" />

        <EditText
            android:id="@+id/create_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_name_label"
            android:layout_marginEnd="@dimen/editTextHorizontalMargin"
            android:layout_marginStart="@dimen/editTextHorizontalMargin"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:hint="@string/enterEventName"
            android:inputType="" />

        <TextView
            android:id="@+id/event_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_event_name"
            android:layout_marginEnd="@dimen/editTextHorizontalMargin"
            android:layout_marginStart="@dimen/editTextHorizontalMargin"
            android:text="@string/eventDescriptionLabel"
            android:textSize="@dimen/recycler_text_size" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_event_info_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editEventDescriptionHeight"
            android:layout_below="@+id/event_description_label"
            android:layout_marginEnd="@dimen/editTextHorizontalMargin"
            android:layout_marginStart="@dimen/editTextHorizontalMargin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_event_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editEventDescriptionHeight"
                android:background="@color/colorPrimaryLight"
                android:gravity="top"
                android:inputType="textFilter" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/button_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_event_info_container"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/set_date_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/editTextHorizontalMargin"
                android:layout_marginStart="@dimen/editTextHorizontalMargin"
                android:layout_weight="0.5"
                android:background="@color/colorPrimaryDark"
                android:text="@string/buttonSetDate" />

            <android.widget.Button
                android:id="@+id/set_time_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/editTextHorizontalMargin"
                android:layout_marginStart="@dimen/editTextHorizontalMargin"
                android:layout_weight="0.5"
                android:background="@color/colorPrimaryDark"
                android:text="@string/buttonSetTime" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/button_set_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/button_label"
            android:layout_marginEnd="@dimen/editTextHorizontalMargin"
            android:layout_marginStart="@dimen/editTextHorizontalMargin"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:scaleType="fitXY"
            android:src="@drawable/party_temp">

        </ImageButton>

    </RelativeLayout>
</ScrollView>